add algorithm rest full controller add database function to a postgres db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+app.datasource.jdbc-url=jdbc:postgresql://localhost:5432/wtw
+app.datasource.username=postgres
+app.datasource.password=password
+app.datasource.pool-size=30
