add jwt authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ app.datasource.jdbc-url=jdbc:postgresql://localhost:5432/wtw
 app.datasource.username=postgres
 app.datasource.password=${DB_USER_PASSWORD}
 app.datasource.pool-size=30
+jwt.secret=secretjwtjavaspringsecure
